--- a/hello-environment/hello-environment.csproj
+++ b/hello-environment/hello-environment.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>hello_environment</RootNamespace>
-	<ContainerRepository>my-app</ContainerRepository>
+	<ContainerRepository>hello-environment-dotnet</ContainerRepository>
   </PropertyGroup>
 
   <ItemGroup>
