--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,12 +16,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with: 
-          fetch-depth: 0
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
-        
+        with:
+          dotnet-version: 9.x
+      
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
