--- a/hello-environment/appsettings.json
+++ b/hello-environment/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ImConfiguration":  "HelloMark"
+  "FromConfigurationFile":  "FromConfigurationFile-hello-environment-dotnet"
 }
